--- a/camunda/requirements.txt
+++ b/camunda/requirements.txt
@@ -7,12 +7,15 @@ Django==3.1.1
 django-configurations==2.2
 django-cors-headers==3.5.0
 django-environ==0.4.5
+django-filter==2.3.0
 djangorestframework==3.11.1
 djangorestframework-jwt==1.11.0
+djangorestframework-simplejwt==4.4.0
 idna==2.10
 itypes==1.2.0
 Jinja2==2.11.2
 MarkupSafe==1.1.1
+psycopg2==2.8.6
 psycopg2-binary==2.8.5
 PyJWT==1.7.1
 pytz==2020.1
